updated dark mode issues

--- a/ap_src/ap_app/static/css/dark.css
+++ b/ap_src/ap_app/static/css/dark.css
@@ -82,6 +82,10 @@ h3 {
     background-color: #3e4549;
 }
 
+.navbar-end {
+    background-color: #a81e1e;
+}
+
 .footer {
     background-color: #292e33;
 }
@@ -205,6 +209,25 @@ h3 {
     width: 80%;
 }
 
+/* The Logout/Login Button */
+#logout {
+    color: #000000;
+}
+
+#logout:hover,
+#logout:focus {
+    color: #10069f;
+}
+
+#login {
+    color: #000000;
+}
+
+#login:hover,
+#login:focus {
+    color: #10069f;
+}
+
 /* The Close Button */
 .close {
     color: #000000;
@@ -249,4 +272,26 @@ h3 {
 
 .dates-cell {
     background-color: var(--dates-cell-background) !important;
+}
+
+/* Signup/Login page */
+#LINK-login {
+    color: #66d1ff;
+}
+
+#NOT-loggedin {
+    color: white;
+}
+
+.help {
+    color: white;
+}
+
+/* Edit Team - Team Name/Description */
+#team-name {
+    color: white;
+}
+
+#team-desc {
+    color: white;
 }
